--- a/dissertation/part1/part1.tex
+++ b/dissertation/part1/part1.tex
@@ -14,20 +14,22 @@ Many physical simulations necessitate the modeling of fracture or crack surfaces
 
 Given the above difficulties with traditional finite element methods, Belytschko, Black, Moes99, Dolbow \cite{Belytschko99, Moes99} and others developed the \emph{eXtended Finite Element Method} (XFEM). The basic idea of the XFEM is to enrich the usual finite element spaces with additional degrees of freedom which incorporate the near tip asymptotic solutions and allow the displacements around the crack surface to be discontinuous. We hold off a complete introduction to and history of the XFEM until Chapter~\ref{ch:pt1.crackpropagation}, but do mention one of the main challenges with utilizing the XFEM: automating the determination of material connectivity and subsequent enrichment of the finite element spaces. In the following chapters, we apply the mesh cutting algorithm of Sifakis et al. \cite{Sifakis07} to resolve arbitrary Lagrangian cutting surfaces against the simulation volume mesh, determine material connectivity, and automatically duplicate mesh vertices to yield \emph{virtual nodes} which effect the requisite enrichment necessary for crack separation.
 
+We conclude this prelude to Part II with a brief summary of the mesh cutting algorithm from \cite{Sifakis07}, as the main subject of Part II is the various applications of this algorithm. Chapter~\ref{ch:pt1.crackpropagation} combines the XFEM with the mesh cutting algorithm to simulate propagating cracks in $2$ dimensions; we also introduce a novel quadrature scheme to accurately and straightforwardly integrate the singular crack tip enrichment basis functions. In Chapter~\ref{ch:pt1.virtualsurgery}, we consider the combination of this mesh cutting algorithm with nonlinear continuum mechanics in $3$ dimensions to create a virtual surgery simulator. Lastly, in Chapter~\ref{ch:pt1.fractureanimation}, we discuss a system to systematically create cracked and shattered models for use in computer animation.
+
 \section*{Mesh Cutting Algorithm Overview}
 
-As the main subject of Part II is the various applications of the mesh cutting algorithm described in Sifakis et al. \cite{Sifakis07}, we provide a brief summary of this algorithm, and refer the reader to \cite{Sifakis07} for more details. The essence of the algorithm may be described by considering the resolution of a segmented curve cutting surface against a triangulated area as the volumetric mesh, although the following overview applies equally well to higher dimensions (as seen in Chapters~\ref{ch:pt1.virtualsurgery} and \ref{ch:pt1.fractureanimation}, for example). Ultimately, the algorithm produces a geometrically coincident volumetric mesh with mesh elements along the cutting surface duplicated into materially disconnected counterparts; see Figure~\ref{fig:pt1.cutting.example} for an example overview of the entire procedure.
+We now give a brief overview of the mesh cutting algorithm described by Sifakis et al.; see \cite{Sifakis07} for more details, specifically in resolving the intra-simplex geometry. The essence of the algorithm may be described by considering the resolution of a segmented curve cutting surface against a triangulated area as the volumetric mesh, although the following overview applies equally well to higher dimensions (as seen in Chapters~\ref{ch:pt1.virtualsurgery} and \ref{ch:pt1.fractureanimation}, for example). Ultimately, the algorithm produces a geometrically coincident volumetric mesh with mesh elements along the cutting surface duplicated into materially disconnected counterparts; see Figure~\ref{fig:pt1.cutting.example} for an example overview of the entire procedure.
 
 \setlength{\figurewidth}{\columnwidth}
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[width=\figurewidth]{part1/figures/cutter_illustration}
-\caption{This mesh is cut by two curves, one of which contains a branch (left). (center) The cutting algorithm first treats each triangle separately, creating duplicates for each locally disjoint material region (center), and then uses the global mesh topology to join these duplicates on the proper degrees of freedom (right). }
+\caption{This mesh is cut by two curves, one of which contains a branch (left). The cutting algorithm first treats each triangle individually, creating duplicates for each locally disjoint material region (center), and then uses the global mesh topology to join these duplicates on the proper degrees of freedom (right). }
 \label{fig:pt1.cutting.example}
 \end{center}
 \end{figure}
 
-In the first stage, the algorithm processes each mesh triangle individually, identifying the disjoint \emph{material components} the triangle is divided into by the cutting curve and describing each as a closed polygonal region (depicted blue in Figure~\ref{fig:pt1.cutting.triangle.2}). For each such material region, a duplicate copy of the triangle is created and assigned said material region. For example, in Figure~\ref{fig:pt1.cutting.triangle.2}, the cutting curve divides the triangle into two distinct material regions, inducing the creation of two duplicates of the original triangle with each duplicate possessing one of the material regions. In the duplicated triangles, we identify vertices within material regions (solid blue circles in Figure~\ref{fig:pt1.cutting.triangle.2}) with the original triangle vertices. We also furnish the duplicate triangles with \emph{virtual nodes} (hollow blue circles in Figure~\ref{fig:pt1.cutting.triangle.2}). A less trivial example is given in Figure~\ref{fig:pt1.cutting.triangle.3}.
+In the first phase, the algorithm processes each mesh triangle individually, identifying the disjoint \emph{material components} the triangle is divided into by the cutting curve and describing each as a closed polygonal region (depicted blue in Figure~\ref{fig:pt1.cutting.triangle.2}). For each such material region, a duplicate copy of the triangle is created and assigned said material region. For example, in Figure~\ref{fig:pt1.cutting.triangle.2}, the cutting curve divides the triangle into two distinct material regions, inducing the creation of two duplicates of the original triangle with each duplicate possessing one of the material regions. In the duplicated triangles, we identify vertices within material regions (solid blue circles in Figure~\ref{fig:pt1.cutting.triangle.2}) with the original triangle vertices. We also furnish the duplicate triangles with \emph{virtual nodes} (hollow blue circles in Figure~\ref{fig:pt1.cutting.triangle.2}). A less trivial example is given in Figure~\ref{fig:pt1.cutting.triangle.3}.
 
 \setlength{\figureheight}{0.25\columnwidth}
 \begin{figure}[htbp]
@@ -42,9 +44,15 @@ In the first stage, the algorithm processes each mesh triangle individually, ide
 \begin{figure}[htbp]
 \begin{center}
 \includegraphics[height=\figureheight]{part1/figures/complex_cutting}
-\caption{A more complex example of the initial division of triangle by a cutting curve. Since the original mesh triangle is divided into $3$ disjoint material regions (left), the algorithm generates $3$ duplicate triangles, each possessing a different material region. (Coloring is consistent with that used in Figure~\ref{fig:pt1.cutting.triangle2}.)}
-\label{fig.complex_cutting}
+\caption{A more complex example of the initial division of triangle by a cutting curve. Since the original mesh triangle is divided into $3$ disjoint material regions (left), the algorithm generates $3$ duplicate triangles, each possessing a different material region (right). (Coloring is consistent with that used in Figure~\ref{fig:pt1.cutting.triangle.2}.)}
+\label{fig:pt1.cutting.triangle.3}
 \end{center}
 \end{figure}
+
+After processing all triangles in the original mesh $\calT$ individually, we obtain a duplicate mesh $\calT'$ composed of duplicate triangles. The second phase of the algorithm proceeds to determine global material connectivity within this duplicate mesh (see Figure~\ref{fig:pt1.cutting.example}). For notational convenience, let $C(T)$ denote the set of triangles duplicated from original triangle $T \in \calT$, and let $P(T')$ denote the original ``parent'' triangle of a duplicate triangle $T' \in \calT'$, so that $T' \in C(T)$ if and only if $T = P(T')$. Determining global material connectivity then proceeds as follows. Given a triangle $T' \in \calT'$, let $T = P(T')$. Then for each $U' \in C(U)$ where $U$ is face-adjacent to $T$, determine if $U'$ shares \emph{material connectivity} across the $T-U$ face with $T'$. If so, the vertices of the corresponding faces of $T'$ and $U'$ are identified as equivalent and collapsed, thus joining these duplicate triangles together.
+
+Refer again to Figure~\ref{fig:pt1.cutting.example} for an example overview of the entire algorithm. The original mesh, at left, consists of three triangles. This mesh is cut by two segmented curves (red); the geometry typifies some of the subtleties in the algorithm, as the center triangle contains a branch, a tip, and is cut into multiple pieces. In the first phase of the algorithm, each triangle is processed in isolation and duplicated based on the disjoint material regions created by the cutting curves, as shown in the center of Figure~\ref{fig:pt1.cutting.example}. In the second phase, these duplicate triangles are joined along faces where they share material connectivity, with the final mesh on the right of Figure~\ref{fig:pt1.cutting.example}.
+
+Notice that, in particular, if mesh vertices are identified with degrees of freedom, the latter mesh in Figure~\ref{fig:pt1.cutting.example} possesses the necessary richness in degrees of freedom to allow the upper crack to partially separate and the lower crack to separate entirely. This automatic generation of additional degrees of freedom is one of the motivating conveniences to combine this mesh cutting algorithm with an XFEM framework, and its fruits are demonstrated in the remainder of Part II.
 
 \renewcommand{\thechapter}{\arabic{chapter}}
