adding some references from the richardson paper

--- a/dissertation/bib/XFEM.bib
+++ b/dissertation/bib/XFEM.bib
@@ -1,3 +1,19 @@
+%Melenk1996289
+%doi = "10.1016/S0045-7825(96)01087-0",
+%url = "http://www.sciencedirect.com/science/article/pii/S0045782596010870",
+@article{Melenk96,
+title = "The partition of unity finite element method: Basic theory and applications",
+journal = "Computer Methods in Applied Mechanics and Engineering",
+volume = "139",
+number = "1–4",
+pages = "289 - 314",
+year = "1996",
+note = "",
+issn = "0045-7825",
+author = "J.M. Melenk and I. Babuška"
+}
+
+%DOI: 10.1002/(SICI)1097-0207(19990620)45:5<601::AID-NME598>3.0.CO;2-S
 @article{Belytschko99,
 author = {T. Belytschko and T. Black},
 title = {Elastic crack growth in finite elements with minimal remeshing},
@@ -33,6 +49,18 @@ year = {1999},
  issue = {12},
  pages = {1741--1760},
  numpages = {20},
+}
+
+%DOI: 10.1002/1097-0207(20000820)48:11<1549::AID-NME955>3.0.CO;2-A
+@article{Sukumar00,
+author = {N. Sukumar and N. Mo\"{e}s and B. Moran and T. Belytschko},
+title = {Extended finite element method for three-dimensional crack modelling},
+journal = {International Journal for Numerical Methods in Engineering},
+volume = {48},
+number = {11},
+pages = {1549--1570},
+month = {August},
+year = {2000},
 }
 
 %doi = {10.1002/1097-0207(20010210)50:4<993::AID-NME164>3.0.CO;2-M},
@@ -71,7 +99,7 @@ keywords = "Elastic inclusion"
 %DOI: 10.1002/nme.169
 @article{Wagner01,
 title={The extended finite element method for rigid particles in {S}tokes flow},
-author={G.J. Wagner and N. Mo\"es and W. K. Liu and T. Belytschko},
+author={G.J. Wagner and N. Mo\"{e}s and W. K. Liu and T. Belytschko},
 journal={International Journal for Numerical Methods in Engineering},
 volume={51},
 number={3},
@@ -92,6 +120,27 @@ year={2001},
  pages={10}
 }
 
+%Karihaloo2003119
+%doi = "10.1016/S0045-7949(02)00431-5",
+%url = "http://www.sciencedirect.com/science/article/pii/S0045794902004315",
+@article{Karihaloo03,
+title = "Modelling of stationary and growing cracks in {FE} framework without remeshing: a state-of-the-art review",
+journal = "Computers \& Structures",
+volume = "81",
+number = "3",
+pages = "119 - 129",
+year = "2003",
+note = "",
+issn = "0045-7949",
+author = "B.L. Karihaloo and Q.Z. Xiao",
+keywords = "Crack",
+keywords = "Extended finite element method (XFEM)",
+keywords = "Finite element (FE) method",
+keywords = "Generalized finite element method (GFEM)",
+keywords = "Level set method (LSM)",
+keywords = "Partition of unity (PU)"
+}
+
 %doi = {10.1016/S0045-7825(03)00346-3},
 @article{Moes03,
  author = {N. Mo\"{e}s and M. Cloirec and P. Cartraud and J.F. Remacle},
@@ -103,6 +152,17 @@ year={2001},
  issue = {28--30},
  pages = {3163--3177},
  numpages = {15},
+}
+
+%DOI: 10.1142/S0219876204000095
+@article{Belytschko04,
+author = {Ted Belytschko and Hao Chen},
+title = {Singular enrichment finite element method for elastodynamic crack propagation},
+journal = {International Journal of Computational Methods},
+volume = {1},
+number = {1},
+pages = {1--15},
+year = {2004},
 }
 
 %Dolbow_Devan_2004
@@ -130,6 +190,18 @@ year={2001},
  numpages = {28},
 }
 
+%DOI: 10.1002/nme.1305
+@article{Areias05,
+author = {Pedro M. A. Areias and Ted Belytschko},
+title = {Analysis of three-dimensional crack initiation and propagation using the extended finite element method},
+journal = {International Journal for Numerical Methods in Engineering},
+volume = {63},
+number = {5},
+pages = {760--788},
+month = {June},
+year = {2005},
+}
+
 %DOI: 10.1002/fld.963
 @article{Coppola05,
   title={Improving {E}ulerian two-phase flow finite element approximation with discontinuous gradient pressure shape functions},
@@ -140,6 +212,26 @@ year={2001},
   pages={1287--1304},
   month={December},
   year={2005},
+}
+
+%Borst2006160
+%doi = "10.1016/j.engfracmech.2005.05.007",
+%url = "http://www.sciencedirect.com/science/article/pii/S0013794405001852",
+@article{Borst06,
+title = "Mesh-independent discrete numerical representations of cohesive-zone models",
+journal = "Engineering Fracture Mechanics",
+volume = "73",
+number = "2",
+pages = "160 - 177",
+year = "2006",
+note = "<ce:title>Advanced Fracture Mechanincs for Life Safety Assessments</ce:title>",
+issn = "0013-7944",
+author = "Ren\'{e} de Borst and Joris J.C. Remmers and Alan Needleman",
+keywords = "Cohesive zone models",
+keywords = "Partition of unity method",
+keywords = "Cohesive segments method",
+keywords = "Crack growth",
+keywords = "Dynamic fracture"
 }
 
 %doi = {10.1002/nme.1761},
@@ -199,6 +291,24 @@ year={2001},
  keywords = {65M60, 65N15, 65N30, 76D45, 76T99, Pressure finite element space, Spurious velocities, Surface tension, Two-phase flow},
 }
 
+%Abdelaziz20081141
+%doi = "10.1016/j.compstruc.2007.11.001",
+%url = "http://www.sciencedirect.com/science/article/pii/S0045794907002957",
+@article{Abdelaziz08,
+title = "A survey of the extended finite element",
+journal = "Computers \& Structures",
+volume = "86",
+number = "11–12",
+pages = "1141 - 1151",
+year = "2008",
+note = "",
+issn = "0045-7949",
+author = "Yazid Abdelaziz and Abdelmadjid Hamouine",
+keywords = "Extended finite element",
+keywords = "Level sets method",
+keywords = "Fracture mechanics"
+}
+
 @article{Beale08,
  author = {J. Thomas Beale and Davod L. Chopp and Randall J. LeVeque and Zhilin Li},
  title = {Correction to the article a comparison of the extended finite element method with the immersed interface method for elliptic equations with discontinuous coefficients and singular sources by {V}aughan et al.},
@@ -250,6 +360,31 @@ keywords = "Incompressible elasticity",
 keywords = "Stokes’ problem",
 keywords = "Discontinuous coefficients",
 keywords = "Surface tension"
+}
+
+%0965-0393-17-4-043001
+%url={http://stacks.iop.org/0965-0393/17/i=4/a=043001},
+%abstract={The extended and generalized finite element methods are reviewed with an emphasis on their applications to problems in material science: (1) fracture, (2) dislocations, (3) grain boundaries and (4) phases interfaces. These methods facilitate the modeling of complicated geometries and the evolution of such geometries, particularly when combined with level set methods, as for example in the simulation growing cracks or moving phase interfaces. The state of the art for these problems is described along with the history of developments.}
+@article{Belytschko09,
+author={Ted Belytschko and Robert Gracie and Giulio Ventura},
+title={A review of extended/generalized finite element methods for material modeling},
+journal={Modelling and Simulation in Materials Science and Engineering},
+volume={17},
+number={4},
+pages={043001},
+year={2009},
+}
+
+%DOI: 10.1002/nme.2411
+@article{Huynh09,
+author = {D. B. P. Huynh and T. Belytschko},
+title = {The extended finite element method for fracture in composite materials},
+journal = {International Journal for Numerical Methods in Engineering},
+volume = {77},
+number = {2},
+pages = {214--239},
+month = {January},
+year = {2009},
 }
 
 %van der Bos:2009:NSP:1519550.1519824,
