--- a/dissertation/part1/part1.tex
+++ b/dissertation/part1/part1.tex
@@ -12,7 +12,7 @@
 
 Many physical simulations necessitate the modeling of fracture or crack surfaces, and in the most demanding of these simulations, these surfaces may have a highly complex non-manifold topology, e.g., with many branches and open ``fronts''. In a dynamics scenario, this may be further complicated by the frequent extension of existing crack fronts and the introduction of new failure surfaces. Applying a traditional finite element method in this context is challenging: one must either constantly regenerate the simulation mesh to account for the fracture geometry, which is computationally expensive and easily introduces ill-conditioned ``sliver'' elements; or artificially and often severely limit the path and resolution of the failure surface to lie along element boundaries. Additionally, in either case, handling a high resolution fracture surface necessitates a correspondingly high resolution simulation volume, at least locally, which in turn increases the computational cost of solving the relevant continuum mechanics equations. Ideally, one should be able to decouple the resolution of the fracture surface (which may be highly detailed for visual effects purposes, for example; see Chapter~\ref{ch:pt1.fractureanimation}) from the resolution of the simulation mesh (which may be limited by available computational resources; see Chapter~\ref{ch:pt1.virtualsurgery}).
 
-Given the above difficulties with traditional finite element methods, Belytschko, Black, Moes99, Dolbow \cite{Belytschko99, Moes99} and others developed the \emph{eXtended Finite Element Method} (XFEM). The basic idea of the XFEM is to enrich the usual finite element spaces with additional degrees of freedom which incorporate the near tip asymptotic solutions and allow the displacements around the crack surface to be discontinuous. We hold off a complete introduction to and history of the XFEM until Chapter~\ref{ch:pt1.crackpropagation}, but do mention one of the main challenges with utilizing the XFEM: automating the determination of material connectivity and subsequent enrichment of the finite element spaces. In the following chapters, we apply the mesh cutting algorithm of Sifakis et al. \cite{Sifakis07} to resolve arbitrary Lagrangian cutting surfaces against the simulation volume mesh, determine material connectivity, and automatically duplicate mesh vertices to yield \emph{virtual nodes} which effect the requisite enrichment necessary for crack separation.
+Given the above difficulties with traditional finite element methods, Belytschko, Black, Moes99, Dolbow \cite{Belytschko99, Moes99} and others developed the \emph{eXtended Finite Element Method} (XFEM), which avoids the need to remesh to capture crack geometry. The basic idea of the XFEM is to enrich the usual finite element spaces with additional degrees of freedom which incorporate the near tip asymptotic solutions and allow the displacements around the crack surface to be discontinuous. We hold off a complete introduction to and history of the XFEM until Chapter~\ref{ch:pt1.crackpropagation}, but do mention one of the main challenges with utilizing the XFEM: automating the determination of material connectivity and subsequent enrichment of the finite element spaces. In the following chapters, we apply the mesh cutting algorithm of Sifakis et al. \cite{Sifakis07} to resolve arbitrary Lagrangian cutting surfaces against the simulation volume mesh, determine material connectivity, and automatically duplicate mesh vertices to yield \emph{virtual nodes} which effect the requisite enrichment necessary for crack separation.
 
 We conclude this prelude to Part II with a brief summary of the mesh cutting algorithm from \cite{Sifakis07}, as the main subject of Part II is the various applications of this algorithm. Chapter~\ref{ch:pt1.crackpropagation} combines the XFEM with the mesh cutting algorithm to simulate propagating cracks in $2$ dimensions; we also introduce a novel quadrature scheme to accurately and straightforwardly integrate the singular crack tip enrichment basis functions. In Chapter~\ref{ch:pt1.virtualsurgery}, we consider the combination of this mesh cutting algorithm with nonlinear continuum mechanics in $3$ dimensions to create a virtual surgery simulator. Lastly, in Chapter~\ref{ch:pt1.fractureanimation}, we discuss a system to systematically create cracked and shattered models for use in computer animation.
 
