finally finishing intro to chapter 1

--- a/dissertation/bib/FDM.bib
+++ b/dissertation/bib/FDM.bib
@@ -20,7 +20,7 @@
  title={On solution of some boundary value problems on high performance computers by fictitious domain method},
  volume={4},
  journal={Dokl Akad Nauk SSSR 144 1962 497500 in Russian English translation in Soviet Math Dokl},
- author={Saul'ev, V K},
+ author={Saul'ev, V. K.},
  year={1963},
  pages={912--925}
 }
@@ -78,7 +78,7 @@ author = "Roland Glowinski and Tsorng-Whay Pan and Jacques Periaux"
  title={A three-dimensional fictitious domain method for incompressible fluid flow problems},
  volume={25},  number={6},
  journal={International Journal for Numerical Methods in Fluids},
- author={Bertrand, F and Tanguy, P A and Thibault, F},
+ author={Bertrand, F. and Tanguy, P. A. and Thibault, F.},
  year={1997},
  pages={719--736}
 }
