--- a/dissertation/bib/FEM_adaptive.bib
+++ b/dissertation/bib/FEM_adaptive.bib
@@ -21,7 +21,7 @@
 %url = {http://portal.acm.org/citation.cfm?id=1552584.1553079},
 %doi = {10.1016/j.jcp.2009.03.044},
 %acmid = {1553079},
-@article{Chen.Zhiming09,
+@article{Chen09,
  author = {Chen, Zhiming and Xiao, Yuanming and Zhang, Linbo},
  title = {The adaptive immersed interface finite element method for elliptic and {M}axwell interface problems},
  journal = {J. Comput. Phys.},
