--- a/dissertation/bib/FEM_conforming.bib
+++ b/dissertation/bib/FEM_conforming.bib
@@ -33,7 +33,7 @@
 
 %Chen96finiteelement,
 %doi = {10.1.1.54.7270},
-@ARTICLE{Chen.Zhiming96,
+@ARTICLE{Chen96,
     author = {Zhiming Chen and Jun Zou},
     title = {Finite element methods and their convergence for elliptic and parabolic interface problems},
     journal = {Numer. Math},
