--- a/dissertation/bib/FEM_mixed.bib
+++ b/dissertation/bib/FEM_mixed.bib
@@ -14,7 +14,7 @@
 %acmid = {276472},
 @article{Han.Houde98,
  author = {Han, Houde and Wu, Xiaonan},
- title = {A New Mixed Finite Element Formulation  and the MAC Method for the Stokes Equations},
+ title = {A New Mixed Finite Element Formulation and the {MAC} Method for the {S}tokes Equations},
  journal = {SIAM J. Numer. Anal.},
  issue_date = {April 1998},
  volume = {35},
