--- a/dissertation/bib/FEM_nonconforming.bib
+++ b/dissertation/bib/FEM_nonconforming.bib
@@ -160,7 +160,7 @@ year = {2010}
 %kwak:2117,
 %url = {http://link.aip.org/link/?SNA/48/2117/1},
 %doi = {10.1137/080728056},
-@article{Kwak.DoY10,
+@article{Kwak10,
 author = {Do Y. Kwak and Kye T. Wee and Kwang S. Chang},
 collaboration = {},
 title = {An Analysis of a Broken $P_1$-Nonconforming Finite Element Method for Interface Problems},
