--- a/dissertation/bib/IIM.bib
+++ b/dissertation/bib/IIM.bib
@@ -365,7 +365,7 @@ pages={874--885},
 %url = {http://portal.acm.org/citation.cfm?id=1387360.1387532},
 %doi = {10.1016/j.jcp.2008.04.027},
 %acmid = {1387532},
-@article{Chen.Tianbing08,
+@article{Chen08,
  author = {Chen, Tianbing and Strain, John},
  title = {Piecewise-polynomial discretization and {K}rylov-accelerated multigrid for elliptic interface problems},
  journal = {J. Comput. Phys.},
