--- a/dissertation/bib/KKT.bib
+++ b/dissertation/bib/KKT.bib
@@ -6,7 +6,7 @@
  number={181},
  journal={Math Comp},
  publisher={American Mathematical Society},
- author={Bramble, James H and Pasciak, Joseph E},
+ author={Bramble, James H. and Pasciak, Joseph E.},
  year={1988},
  pages={387--388}
 }
