--- a/dissertation/bib/LS.bib
+++ b/dissertation/bib/LS.bib
@@ -19,15 +19,15 @@
 }
 
 %Osher_Fedkiw_2004
+%url={http://link.aip.org/link/AMREAD/v57/i3/pB15/s1&Agg=doi},
 @book{Osher04,
  title={Level Set Methods and Dynamic Implicit Surfaces},
  volume={57},
- url={http://link.aip.org/link/AMREAD/v57/i3/pB15/s1&Agg=doi},
  number={3},
  journal={Applied Mechanics Reviews},
  publisher={Springer},
- author={Osher, S and Fedkiw, R},
- editor={Antman, S S and Marsden, J E and Sirovich, LEditors},
+ author={Osher, S. and Fedkiw, R.},
+ editor={Antman, S. S. and Marsden, J. E. and Sirovich, LEditors},
  year={2004},
  pages={B15}
 }
