--- a/dissertation/bib/SO.bib
+++ b/dissertation/bib/SO.bib
@@ -87,7 +87,7 @@ author = "Stanley J. Osher and Fadil Santosa"
 %Wei_Wang_2008
 %url={http://doi.wiley.com/10.1002/nme.2785},
 @article{Wei.Peng08,
- title={A STRUCTURAL OPTIMIZATION METHOD WITH {XFEM} AND LEVEL SET},
+ title={A structural optimization method with {XFEM} and level set},
  number={February},
  journal={Structural Optimization},
  author={Wei, Peng and Wang, Michael Yu},
