--- a/dissertation/bib/XFEM.bib
+++ b/dissertation/bib/XFEM.bib
@@ -25,6 +25,17 @@ month = {June},
 year = {1999},
 }
 
+%Dolbow_1999
+@phdthesis{Dolbow99,
+ title={An extended finite element method with discontinuous enrichment for applied mechanics},
+ url={http://dolbow.cee.duke.edu/Thesis.ps.gz},
+ month={December},
+ journal={Theoretical And Applied Mechanics},
+ school={Northwestern University},
+ author={Dolbow, John},
+ year={1999}
+}
+
 %doi = {10.1002/(SICI)1097-0207(19990910)46:1<131::AID-NME726>3.0.CO;2-J},
 @article{Moes99,
  author = {Nicolas Mo\"{e}s and John Dolbow and Ted Belytschko},
@@ -49,6 +60,21 @@ year = {1999},
  issue = {12},
  pages = {1741--1760},
  numpages = {20},
+}
+
+%Strouboulis200043
+%doi = "10.1016/S0045-7825(99)00072-9",
+%url = "http://www.sciencedirect.com/science/article/pii/S0045782599000729",
+@article{Strouboulis00,
+title = "The design and analysis of the Generalized Finite Element Method",
+journal = "Computer Methods in Applied Mechanics and Engineering",
+volume = "181",
+number = "1–3",
+pages = "43 - 69",
+year = "2000",
+note = "",
+issn = "0045-7825",
+author = "T. Strouboulis and I. Babuška and K. Copps"
 }
 
 %DOI: 10.1002/1097-0207(20000820)48:11<1549::AID-NME955>3.0.CO;2-A
@@ -108,6 +134,18 @@ month={May},
 year={2001},
 }
 
+%DOI: 10.1002/nme.468
+@article{Ji.H02,
+author = {H. Ji and D. Chopp and J. E. Dolbow},
+title = {A hybrid extended finite element/level set method for modeling phase transformations},
+journal = {International Journal for Numerical Methods in Engineering},
+volume = {54},
+number = {8},
+pages = {1209--1233},
+month = {July},
+year = {2002}
+}
+
 %Chessa_Belytschko_2003
 %url={http://link.aip.org/link/JAMCAV/v70/i1/p10/s1&Agg=doi},
 @article{Chessa03,
@@ -115,7 +153,7 @@ year={2001},
  volume={70},
  number={1},
  journal={ASME J of Appl Mech},
- author={Chessa, J and Belytschko, T},
+ author={Chessa, J. and Belytschko, T.},
  year={2003},
  pages={10}
 }
@@ -154,6 +192,23 @@ keywords = "Partition of unity (PU)"
  numpages = {15},
 }
 
+%springerlink:10.1007/s00466-002-0391-2
+%url = {http://dx.doi.org/10.1007/s00466-002-0391-2},
+%note = {10.1007/s00466-002-0391-2},
+@article{Stazi03,
+author = {Stazi, F. L. and Budyn, E. and Chessa, J. and Belytschko, T.},
+affiliation = {Dipartimento di Ingegneria Strutturale e Geotecnica, Universit\`{a} di Roma ``La Sapienza'' e-mail: furio.stazi\@uniroma1.it},
+title = {An extended finite element method with higher-order elements for curved cracks},
+journal = {Computational Mechanics},
+publisher = {Springer Berlin / Heidelberg},
+issn = {0178-7675},
+keyword = {Engineering},
+pages = {38-48},
+volume = {31},
+issue = {1},
+year = {2003}
+}
+
 %DOI: 10.1142/S0219876204000095
 @article{Belytschko04,
 author = {Ted Belytschko and Hao Chen},
@@ -172,7 +227,7 @@ year = {2004},
  volume={59},
  number={1},
  journal={International Journal for Numerical Methods in Engineering},
- author={Dolbow, J E and Devan, A},
+ author={Dolbow, J. E. and Devan, A.},
  year={2004},
  pages={47--67}
 }
@@ -202,16 +257,41 @@ month = {June},
 year = {2005},
 }
 
+%DOI: 10.1002/nme.1386
+@article{Bechet05,
+author = {E. B\'{e}chet and H. Minnebo and N. Mo\"{e}s and B. Burgardt},
+title = {Improved implementation and robustness study of the {X-FEM} for stress analysis around cracks},
+journal = {International Journal for Numerical Methods in Engineering},
+volume = {64},
+number = {8},
+pages = {1033--1056},
+month = {October},
+year = {2005},
+}
+
 %DOI: 10.1002/fld.963
 @article{Coppola05,
-  title={Improving {E}ulerian two-phase flow finite element approximation with discontinuous gradient pressure shape functions},
-  author={A. H. Coppola-Own and R. Codina},
-  journal={International Journal for Numerical Methods in Fluids},
-  volume={49},
-  number={12},
-  pages={1287--1304},
-  month={December},
-  year={2005},
+title = {Improving {E}ulerian two-phase flow finite element approximation with discontinuous gradient pressure shape functions},
+author = {A. H. Coppola-Own and R. Codina},
+journal = {International Journal for Numerical Methods in Fluids},
+volume = {49},
+number = {12},
+pages = {1287--1304},
+month = {December},
+year = {2005},
+}
+
+%Laborde_Pommier_Renard_Salaün_2005
+%url={http://doi.wiley.com/10.1002/nme.1370},
+@article{Laborde05,
+ title={High-order extended finite element method for cracked domains},
+ volume={64},
+ number={3},
+ journal={International Journal for Numerical Methods in Engineering},
+ publisher={John Wiley \& Sons, Ltd.},
+ author={Laborde, Patrick and Pommier, Julien and Renard, Yves and Sala\"{u}n, Michel},
+ year={2005},
+ pages={354--381}
 }
 
 %Borst2006160
@@ -261,7 +341,7 @@ keywords = "Dynamic fracture"
 }
 
 @article{Vaughan06,
- author = {B L Vaughn Jr. and B G Smith and D L Chopp},
+ author = {B. L. Vaughn Jr. and B. G. Smith and D. L. Chopp},
  title = {A comparison of the extended finite element method with the immersed interface method for elliptic equations with discontinuous coefficients and singular sources},
  journal = {Comm. App. Math. and Comp. Sci.},
  year = {2006},
@@ -318,6 +398,19 @@ keywords = "Fracture mechanics"
  number = {1},
  pages = {95--101},
  numpages = {17},
+}
+
+%Benvenuti_Tralli_Ventura_2008
+%url={http://www3.interscience.wiley.com/journal/116329971/abstract},
+@article{Benvenuti08,
+ title={A regularized {XFEM} model for the transition from continuous to discontinuous displacements},
+ volume={74},
+ number={6},
+ journal={International Journal for Numerical Methods in Engineering},
+ publisher={John Wiley \& Sons},
+ author={Benvenuti, E. and Tralli, A. and Ventura, Giulio},
+ year={2008},
+ pages={911--944}
 }
 
 %Gerstenberger20081699
@@ -405,4 +498,18 @@ year = {2009},
  publisher = {Academic Press Professional, Inc.},
  address = {San Diego, CA, USA},
  keywords = {Distributed Lagrange multipliers, Lagrange multipliers, Level-set methods, Multi-phase flow, Premixed combustion, eXtended finite element methods},
+}
+
+%DOI: 10.1002/nme.3020 
+@article{Mousavi11,
+author = {Mousavi, S. E. and Grinspun, E. and Sukumar, N.},
+title = {Harmonic enrichment functions: A unified treatment of multiple, intersecting and branched cracks in the extended finite element method},
+journal = {International Journal for Numerical Methods in Engineering},
+volume = {85},
+number = {10},
+pages = {1306-1322},
+month = {March},
+year = {2011},
+issn = {0029-5981},
+publisher = {John Wiley \& Sons, Ltd.},
 }
