--- a/dissertation/bib/XFEM_LS.bib
+++ b/dissertation/bib/XFEM_LS.bib
@@ -32,13 +32,14 @@ keywords = "Elastic inclusion"
 
 %Moes_Gravouil_Belytschko_2002
 %url={http://www3.interscience.wiley.com/journal/89015903/abstract},
-@article{Moes02,
+@article{Moes02a,
  title={Non-planar 3{D} crack growth by the extended finite element and level sets-Part {I}: Mechanical model},
  volume={53},
  number={11},
  journal={International Journal for Numerical Methods in Engineering},
  publisher={John Wiley \& Sons},
- author={Mo\"{e}s, Nicolas and Gravouil, A and Belytschko, Ted},
+ author={Mo\"{e}s, Nicolas and Gravouil, A. and Belytschko, Ted},
+ month={April},
  year={2002},
  pages={2549--2568}
 }
@@ -51,7 +52,7 @@ keywords = "Elastic inclusion"
  number={11},
  journal={International Journal for Numerical Methods in Engineering},
  publisher={John Wiley \& Sons},
- author={Gravouil, A and Mo\"{e}s, Nicolas and Belytschko, Ted},
+ author={Gravouil, A. and Mo\"{e}s, Nicolas and Belytschko, Ted},
  year={2002},
  pages={2569--2586}
 }
