--- a/dissertation/bib/XFEM_cohesive.bib
+++ b/dissertation/bib/XFEM_cohesive.bib
@@ -1,12 +1,13 @@
 %Moes2002813
 %doi = "10.1016/S0013-7944(01)00128-X",
 %url = "http://www.sciencedirect.com/science/article/pii/S001379440100128X",
-@article{Moes02,
+@article{Moes02b,
 title = "Extended finite element method for cohesive crack growth",
 journal = "Engineering Fracture Mechanics",
 volume = "69",
 number = "7",
 pages = "813 - 833",
+month = "May",
 year = "2002",
 note = "",
 issn = "0013-7944",
@@ -50,7 +51,7 @@ year = {2003},
  number={1},
  journal={International Journal for Numerical Methods in Engineering},
  publisher={John Wiley & Sons, Ltd.},
- author={Borst, Ren\'{e} De and Guti\'{e}rrez, Miguel A and Wells, Garth N and Remmers, Joris J C and Askes, Harm},
+ author={Borst, Ren\'{e} De and Guti\'{e}rrez, Miguel A. and Wells, Garth N. and Remmers, Joris J. C. and Askes, Harm},
  year={2004},
  pages={289--315}
 }
@@ -60,7 +61,7 @@ year = {2003},
 %   adsurl = {http://adsabs.harvard.edu/abs/2007IJNME..72..464A},
 @ARTICLE{Asferg07,
    author = {{Asferg}, J.~L. and {Poulsen}, P.~N. and {Nielsen}, L.~O.},
-    title = "{A consistent partly cracked XFEM element for cohesive crack growth}",
+    title = "{A consistent partly cracked {XFEM} element for cohesive crack growth}",
   journal = {International Journal for Numerical Methods in Engineering},
      year = 2007,
     month = oct,
