--- a/dissertation/bib/XFEM_convergence.bib
+++ b/dissertation/bib/XFEM_convergence.bib
@@ -21,7 +21,7 @@ author = "Elie Chahine and Patrick Laborde and Yves Renard"
  number={11},
  journal={Communications in Numerical Methods in Engineering},
  publisher={John Wiley \& Sons},
- author={Bordas, Stephane Pierre Alain and Duflot, M and Le, P},
+ author={Bordas, Stephane Pierre Alain and Duflot, M. and Le, P},
  year={2007},
  pages={961--971}
 }
@@ -34,13 +34,13 @@ author = "Elie Chahine and Patrick Laborde and Yves Renard"
  number={6},
  journal={International Journal for Numerical Methods in Engineering},
  publisher={John Wiley \& Sons},
- author={Chahine, E and Laborde, Patrick and Renard, Yves},
+ author={Chahine, E. and Laborde, Patrick and Renard, Yves},
  year={2008},
  pages={629--646}
 }
 
 %DOI: 10.1002/nme.2781
-@article{Shen.Yongxing09,
+@article{Shen09,
 author = {Yongxing Shen and Adrian Lew},
 title = {An optimally convergent discontinuous Galerkin-based extended finite element method for fracture mechanics},
 journal = {International Journal for Numerical Methods in Engineering},
