--- a/dissertation/bib/embedded.bib
+++ b/dissertation/bib/embedded.bib
@@ -5,7 +5,7 @@
  volume={8},
  number={12},
  journal={Physics of Fluids},
- author={Harlow, F H and Welch, J E},
+ author={Harlow, F. H. and Welch, J. E.},
  year={1965},
  pages={2182--2189}
 }
@@ -22,5 +22,5 @@ year = "1972",
 note = "",
 issn = "0021-9991",
 doi = "10.1016/0021-9991(72)90065-4",
-author = "Charles S Peskin"
+author = "Charles S. Peskin"
 }
