--- a/dissertation/dissertation.macros.tex
+++ b/dissertation/dissertation.macros.tex
@@ -14,7 +14,7 @@
 \usepackage{graphicx}
 \usepackage{multicol}
 \usepackage{multirow}
-\usepackage{subfigure}
+\usepackage{subfig}
 \usepackage{verbatim}
 
 \newcommand{\bbR}{\mathbb{R}}
