--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -20,7 +20,7 @@
 \include{part1/chapter3/chapter3}
 \include{part2/part2}
 \include{part2/chapter4/chapter4}
-%\include{part2/chapter5/chapter5}
+\include{part2/chapter5/chapter5}
 \appendix
 \include{part2/appendix}
 
