--- a/dissertation/part1/part1.tex
+++ b/dissertation/part1/part1.tex
@@ -20,33 +20,28 @@ We conclude this prelude to Part II with a brief summary of the mesh cutting alg
 
 We now give a brief overview of the mesh cutting algorithm described by Sifakis et al.; see \cite{Sifakis07} for more details, specifically in resolving the intra-simplex geometry. The essence of the algorithm may be described by considering the resolution of a segmented curve cutting surface against a triangulated area as the volumetric mesh, although the following overview applies equally well to higher dimensions (as seen in Chapters~\ref{ch:pt1.virtualsurgery} and \ref{ch:pt1.fractureanimation}, for example). Ultimately, the algorithm produces a geometrically coincident volumetric mesh with mesh elements along the cutting surface duplicated into materially disconnected counterparts; see Figure~\ref{fig:pt1.cutting.example} for an example overview of the entire procedure.
 
-\setlength{\figurewidth}{\columnwidth}
-\begin{figure}[htbp]
-\begin{center}
+\setlength{\figurewidth}{\textwidth}
+\begin{figure}[htb]
+\centering
 \includegraphics[width=\figurewidth]{part1/figures/cutter_illustration}
 \caption{This mesh is cut by two curves, one of which contains a branch (left). The cutting algorithm first treats each triangle individually, creating duplicates for each locally disjoint material region (center), and then uses the global mesh topology to join these duplicates on the proper degrees of freedom (right). }
 \label{fig:pt1.cutting.example}
-\end{center}
 \end{figure}
 
 In the first phase, the algorithm processes each mesh triangle individually, identifying the disjoint \emph{material components} the triangle is divided into by the cutting curve and describing each as a closed polygonal region (depicted blue in Figure~\ref{fig:pt1.cutting.triangle.2}). For each such material region, a duplicate copy of the triangle is created and assigned said material region. For example, in Figure~\ref{fig:pt1.cutting.triangle.2}, the cutting curve divides the triangle into two distinct material regions, inducing the creation of two duplicates of the original triangle with each duplicate possessing one of the material regions. In the duplicated triangles, we identify vertices within material regions (solid blue circles in Figure~\ref{fig:pt1.cutting.triangle.2}) with the original triangle vertices. We also furnish the duplicate triangles with \emph{virtual nodes} (hollow blue circles in Figure~\ref{fig:pt1.cutting.triangle.2}). A less trivial example is given in Figure~\ref{fig:pt1.cutting.triangle.3}.
 
-\setlength{\figureheight}{0.25\columnwidth}
-\begin{figure}[htbp]
-\begin{center}
+\setlength{\figureheight}{0.25\textwidth}
+\begin{figure}[htb]
+\centering
 \includegraphics[height=\figureheight]{part1/figures/cutting}
 \caption{Simple example of an original mesh triangle (left) duplicated with its disjoint \emph{material regions} (blue) being distributed among the duplicates (middle, right). Likewise, the vertices in each duplicate are either identified with the vertices of the original triangle (\emph{material nodes}, sold blue) or duplicate copies (\emph{virtual nodes}, hollow blue), depending on whether they fall within a material region.}
 \label{fig:pt1.cutting.triangle.2}
-\end{center}
 \end{figure}
-
-\setlength{\figureheight}{0.25\columnwidth}
 \begin{figure}[htbp]
-\begin{center}
+\centering
 \includegraphics[height=\figureheight]{part1/figures/complex_cutting}
 \caption{A more complex example of the initial division of triangle by a cutting curve. Since the original mesh triangle is divided into $3$ disjoint material regions (left), the algorithm generates $3$ duplicate triangles, each possessing a different material region (right). (Coloring is consistent with that used in Figure~\ref{fig:pt1.cutting.triangle.2}.)}
 \label{fig:pt1.cutting.triangle.3}
-\end{center}
 \end{figure}
 
 After processing all triangles in the original mesh $\calT$ individually, we obtain a duplicate mesh $\calT'$ composed of duplicate triangles. The second phase of the algorithm proceeds to determine global material connectivity within this duplicate mesh (see Figure~\ref{fig:pt1.cutting.example}). For notational convenience, let $C(T)$ denote the set of triangles duplicated from original triangle $T \in \calT$, and let $P(T')$ denote the original ``parent'' triangle of a duplicate triangle $T' \in \calT'$, so that $T' \in C(T)$ if and only if $T = P(T')$. Determining global material connectivity then proceeds as follows. Given a triangle $T' \in \calT'$, let $T = P(T')$. Then for each $U' \in C(U)$ where $U$ is face-adjacent to $T$, determine if $U'$ shares \emph{material connectivity} across the $T-U$ face with $T'$. If so, the vertices of the corresponding faces of $T'$ and $U'$ are identified as equivalent and collapsed, thus joining these duplicate triangles together.
