--- a/dissertation/part2/appendix.tex
+++ b/dissertation/part2/appendix.tex
@@ -15,7 +15,7 @@ In Chapter~\ref{ch:pt2.poisson}, \S\ref{subsec:ch4.discretization.embedding} we 
 where $\tilde{p} \lrp{\alpha_1, \alpha_2, \alpha_3} = p \lrp{\alpha_1 \bfx_1 + \alpha_2 \bfx_2 + \alpha_3 \bfx_3}$. Note how the multiplicity $3$ quadrature point with barycentric coordinates $(1/5, 1/5, 3/5)$ in Table~\ref{tab:pt2.quadrature.rules} represents all of the latter $3$ quadrature points in \eqref{eq:pt2.quadrature.example} via permutation of the coordinates.
 
 \begin{table}[htbp]
-\begin{center}
+\centering
 \begin{tabular}{|@{$\,$}c@{$\,$}|@{$\,$}c@{$\,$}|c|c|}
 \hline
 order & mult. & weight & barycentric coordinates \\
@@ -38,7 +38,6 @@ $2$ & $3$ & $1/3$ & $(1/6, 1/6, 2/3)$ \\
 & $3$ & $0.132394152788506$ & $(0.059715871789770, 0.470142064105115, 0.4701\dotso)$ \\
 \hline
 \end{tabular}
-\end{center}
 \caption{Triangle Gaussian quadrature rules of order $1$ through $5$, as given in \cite{Cowper73}. [Some repeated barycentric coordinates have been abbreviated with ``$\dotso$'' for formatting purposes.]}
 \label{tab:pt2.quadrature.rules}
 \end{table}
@@ -63,7 +62,7 @@ For embedded Neumann discretizations, to simplify implementation, we assume that
 In the context of the constraint aggregation algorithm for the discretization of Dirichlet boundary conditions and interfacial jump conditions for Poisson's equation, as mentioned in Chapter~\ref{ch:pt2.poisson}, \S\ref{subsubsec:ch4.constraintaggregation}, we found that the double-wide constraints introduced in \cite{Bedrossian10} present significant conditioning issues in $3$ dimensions that do not exist in $2$ dimensions. Table~\ref{tab:pt2.constraintconditioning} shows the condition numbers and the number of conjugate gradient solve iterations for the $Z^tAZ$ matrices resulting from the discretization of a simple Dirichlet problem and from the discretization of a similarly simple interface problem using each of two alternate discretizations $\Lambda^h$ of the Lagrange multiplier space $\Lambda$: $\Lambda^h_2$, which corresponds to the double-wide constraints; and $\Lambda^h_a$, which corresponds to the aggregate constraints constructed via the algorithm described in \S\ref{subsubsec:ch4.constraintaggregation}. We calculated these statistics using PETSc in exactly the same way as for Table~\ref{tab:ch4.examples.interface}. This includes applying Jacobi preconditioning and then solving with (incomplete Cholesky-preconditioned) conjugate gradient to a relative residual norm of $2.3 \times 10^{-13}$ of the Jacobi preconditioned system. Clearly, the conditioning of the $Z^tAZ$ system arising from the double-wide constraints is several orders of magnitude worse than that arising from the constraint aggregation algorithm described in \S\ref{subsubsec:ch4.constraintaggregation}.
 
 \begin{table}[htbp]
-\begin{center}
+\centering
 \begin{tabular}{|c|c|c|c|c|}
 \hline
 Test case & cond. \# (no ICC) & cond. \# (w/ICC) & \# CG iter. & \# PCG iter. \\
@@ -74,7 +73,6 @@ Dirichlet, $\Lambda^h = \Lambda^h_a$ & $9.3 \times 10^{ 2}$ & $2.3 \times 10^{ 1
 Interface, $\Lambda^h = \Lambda^h_a$ & $3.9 \times 10^{ 3}$ & $4.1 \times 10^{ 1}$ &   $494$ &    $61$ \\
 \hline
 \end{tabular}
-\end{center}
 \caption{Condition numbers and (preconditioned) conjugate gradient ((P)CG) solve iterations, both with and without Incomplete Cholesky (ICC) preconditioning, for the $Z^tAZ$ system arising from the discretization of a Dirichlet and from the discretization of an interface problem at grid resolution $32 \times 32 \times 32$. The Dirichlet problem has $\Omega = \{\bfx : \abs{\bfx} \leq 0.8\}$ and $\beta \equiv 1$; the interface problem has $\Gamma = \{\bfx : \abs{\bfx} = 0.8\}$ and $(\beta^-, \beta^+) \equiv (1, 2)$.}
 \label{tab:pt2.constraintconditioning}
 \end{table}
